keycloak-integration.yaml
# SealedSecretsなどで改善する
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-deployment
  template:
    metadata:
      labels:
        app: keycloak-deployment
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:23.0.6
          command: ["/opt/keycloak/bin/kc.sh", "start-dev"]
          ports:
            - containerPort: 8080
