traefik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: default
spec:
  rules:
  - host: nextcloud.app.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nextcloud-release
            port:
              number: 8080
  - host: keycloak.app.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak-service
            port:
              number: 80
